Osa 3. Kymmenes tehtävä

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,39 @@
 .first-box-container {
   width: 200px;
-  height: 100px;
+  height: 150px;
+  border-style: solid;
+  border-width: 10px;
+  border-color: green;
   background-color: red;
   position: absolute;
 }
 
 .second-box-container {
   width: 200px;
-  height: 100px;
+  height: 150px;
   background-color: yellow;
+  border-style: solid;
+  border-width: 10px;
+  border-color: red;
   left: 250px;
   position: absolute;
 }
 
 .third-box-container {
   width: 200px;
-  height: 100px;
+  height: 150px;
+  border-style: solid;
+  border-width: 10px;
+  border-color: yellow;
   background-color: green;
   left: 500px;
   position: absolute;
+}
+
+p {
+  color: blue;
+  font-family: arial;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 50px;
 }
