--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
-* {
-  color: brown;
+body {
+  margin: 0 auto;
+  max-width: 50em;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  line-height: 1.5;
+  padding: 4em 1em;
+  color: #555;
 }
 
-li {
-  color: violet;
-}
-
-.paaotsikko {
-  color: blue;
-}
-
-#punainen-kohta {
-  color: red;
+h1, h2, h3 {
+  margin-top: 1em;
+  padding-top: 1em;
+  color: #333;
 }
